--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         <div class="wrapper">
           <div class="wrapper_inner">
             <div class="text_center hero_content">
-              <h1 class="h2">Spruce Emmanuel</h1>
-              <p class="h5">WEB DEVELOPER && TECHNICAL WRITER</p>
+              <h1 class="h2">Steve Batcheller</h1>
+              <p class="h5">Freelance Photographer</p>
             </div>
           </div>
           <ul role="list" class="flex flex_between hero_social">
-            <address>Port Harcourt, Nigeria</address>
+            <address>Frederick County, Maryland</address>
             <ul role="list" class="flex">
               <li>Find me online</li>
               <li>
