--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
             <ul role="list" class="flex">
               <li>Find me online</li>
               <li>
-                <a href="https://github.com/iamspruce" target="_blank">
+                <a href="https://www.instagram.com/ssbatch410/" target="_blank">
                   <img
-                    src="/assets/icon-github.svg"
-                    alt="GitHub"
+                    src="/assets/instagram_2626270.png"
+                    alt="Instagram"
                     width="24"
                     height="24"
                   />
